2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having removed aclocal/sysv-ipc.m4.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/sysv-ipc.m4: Remove (Unused).
	* aclocal/target.m4: Sync with acinclude.m4 (Part of fix to PR 312).

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: Lots of changes addressing PR 312.

2002-11-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/target.m4: Apply RTEMS_CONFIGURE_ARGS_QUOTE (Part of fix
	to PR 312).

2002-11-18	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-ss-20021118.

2002-11-18	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20021118.

2002-11-17	Joel Sherrill <joel@OARcorp.com>

	* aclocal/bsp-alias.m4, aclocal/check-bsps.m4: Added support for
	Motorola MTX603e.

2002-11-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/target.m4: Use RTEMS_CONFIGURE_ARGS_QUOTE.

2002-11-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: Use AS_IF instead of if/then/else/endif.
	* configure.ac: Ditto.

2002-11-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove CFLAGS_DEBUG_OPTIMIZE_V,
	CXXFLAGS_DEBUG_OPTIMIZE_V, LDFLAGS_DEBUG_V, CFLAGS_DEFAULT.
	Support @CFLAGS@, @CXXFLAGS@.

2002-11-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: Allow autoconf-2.56.

2002-11-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: Add CXX_FOR_*, CXXFLAGS_FOR_*.
	Fix stupid typo (continue/configure).
	* aclocal/prog-cc.m4: Remove obsolete comments.
	Acknowledge CFLAGS.

2002-11-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: _RTEMS_OUTPUT_SUBDIRS: Move ac_subconfigure_vars to the
	end of the args passed to sub-configure-scripts. (Reported by
	Wulf Hofbauer <wh73@cornell.edu>)

2002-11-12	Joel Sherrill <joel@OARcorp.com>

	* configure.ac: Remove make/compilers/Makefile.

2002-11-11	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-ss-20021111.
