@@ -66,14 +66,11 @@ CFLAGS_PROFILE_V=-pg
 CXXFLAGS_PROFILE_V=-pg
 LDFLAGS_PROFILE_V =
 
-# List of library paths without -L
-LD_PATHS= $(PROJECT_RELEASE)/lib
-
 # ld flag for incomplete link
 LDFLAGS_INCOMPLETE = -r
 
 # ld flags for profiling, debugging
-LDFLAGS=$(LDFLAGS_PROFILE) $(LDFLAGS_DEBUG) $(LD_PATHS:%=-L %)
+LDFLAGS=$(LDFLAGS_PROFILE) $(LDFLAGS_DEBUG)
 
 #
 # Client compiler and support tools
